Fix flex box spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,6 +69,8 @@ a:visited {
     gap: 10px;
     background-color: white;
     border-radius: 5px;
+    padding: 5px 15px;
+    gap: 20px;
 }
 
 .card-item-link:hover {
@@ -79,7 +81,6 @@ a:visited {
     border-radius: 5px;
     height: 150px;
     width: auto;
-    margin: 20px;
 }
 
 .site-img {
@@ -90,7 +91,7 @@ a:visited {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 15px 15px 15px 0;
+    margin: 10px 10px 10px 0;
     gap: 10px;
 }
 
@@ -115,7 +116,6 @@ a:visited {
 }
 
 .card-text .note {
-    padding-top: 10px;
     font-size: 16px;
     font-style: italic;
 }
